--- a/index.html
+++ b/index.html
@@ -225,7 +225,21 @@
 
 
 
-  <footer class="page-footer light-blue">
+  <footer class="page-footer light-blue hide-on-med-and-up">
+    <div class="container">
+      <div class="row center">
+        <h5 class="white-text">Rodrigo Ezequiel Cattarozzi</h5>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        <div class="row center">
+          Made by <a class="orange-text text-lighten-3" href="#">Rodrigo Cattarozzi</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <footer class="page-footer light-blue hide-large">
     <div class="container">
       <div class="row center">
         <h5 class="white-text">Rodrigo Ezequiel Cattarozzi</h5>
