--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 
 
-  <footer class="page-footer light-blue hide-on-med-and-up">
+  <footer class="page-footer-fixed light-blue hide-on-med-and-down">
     <div class="container">
       <div class="row center">
         <h5 class="white-text">Rodrigo Ezequiel Cattarozzi</h5>
@@ -239,7 +239,7 @@
       </div>
     </div>
   </footer>
-  <footer class="page-footer light-blue hide-large">
+  <footer class="page-footer light-blue hide-on-large-only">
     <div class="container">
       <div class="row center">
         <h5 class="white-text">Rodrigo Ezequiel Cattarozzi</h5>
