--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
               <h5>Habilidades</h5>
               <ul class="collapsible">
                 <li>
-                  <div class="collapsible-header"><i class="material-icons">filter_drama</i>Trabajo en equipo</div>
+                  <div class="collapsible-header"><i class="material-icons">control_point</i>Trabajo en equipo</div>
                 </li>
                 <li>
-                  <div class="collapsible-header"><i class="material-icons">place</i>Aprendizaje rápido</div>
+                  <div class="collapsible-header"><i class="material-icons">control_point</i>Aprendizaje rápido</div>
                 </li>
                 <li>
-                  <div class="collapsible-header"><i class="material-icons">whatshot</i>Proactividad</div>
+                  <div class="collapsible-header"><i class="material-icons">control_point</i>Proactividad</div>
                 </li>
               </ul>
             </div>
