--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <div class="card">
                     <div class="card-image">
                       <img src="char.png">
-                      <a class="btn-floating halfway-fab waves-effect waves-light light-blue"><i
+                      <a href="http://charg.herokuapp.com" class="btn-floating halfway-fab waves-effect waves-light light-blue"><i
                           class="material-icons ">visibility</i></a>
                     </div>
                     <div class="card-content">
